tests/sksl/errors/Ossfuzz44561.glsl
### Compilation failed:

error: 1: unknown identifier 'ix'
void m(){ix;void[(0).r1(((5).ss0s.ss0s.sss0.ss0s+(5).ss0s.sss.00ss.ss0s.ss .ss0.ss00.ss0s+(5).ss0s.ss0.s0s.ss00...
         ^^
error: 1: too many components in swizzle mask
...[(0).r1(((5).ss0s.ss0s.sss0.ss0s+(5).ss0s.sss.00ss.ss0s.ss .ss0.ss00.ss0s+(5).ss0s.ss0.s0s.ss00.sssch (int) {case 0:{{{{{{{{{{{{{{{{{{{{{{{{e;void n(){;; int m;;half x;
                                                                                                       ^
error: 1: expected ')' to complete expression, but found '{'
...((5).ss0s.ss0s.sss0.ss0s+(5).ss0s.sss.00ss.ss0s.ss .ss0.ss00.ss0s+(5).ss0s.ss0.s0s.ss00.sssch (int) {case 0:{{{{{{{{{{{{{{{{{{{{{{{{e;void n(){;; int m;;half x;
                                                                                                       ^
error: 1: expected ')' to complete function arguments, but found 'case'
...(5).ss0s.ss0s.sss0.ss0s+(5).ss0s.sss.00ss.ss0s.ss .ss0.ss00.ss0s+(5).ss0s.ss0.s0s.ss00.sssch (int) {case 0:{{{{{{{{{{{{{{{{{{{{{{{{e;void n(){;; int m;;half x;
                                                                                                       ^^^^
error: 1: not a function
void m(){ix;void[(0).r1(((5).ss0s.ss0s.sss0.ss0s+(5).ss0s.sss.00ss.ss0s.ss .ss0.ss00.ss0s+(5).ss0s.ss0.s0s.ss00.sssch (int) {case 0:{{{{{{{{{{{{{{{{{{{{{{{{e;void n(){;; int m;;half x;
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: 1: expected ']' to complete array access expression, but found '0'
...s0s.ss0s.sss0.ss0s+(5).ss0s.sss.00ss.ss0s.ss .ss0.ss00.ss0s+(5).ss0s.ss0.s0s.ss00.sssch (int) {case 0:{{{{{{{{{{{{{{{{{{{{{{{{e;void n(){;; int m;;half x;
                                                                                                       ^
error: 1: expected ';', but found ':'
...0s.ss0s.sss0.ss0s+(5).ss0s.sss.00ss.ss0s.ss .ss0.ss00.ss0s+(5).ss0s.ss0.s0s.ss00.sssch (int) {case 0:{{{{{{{{{{{{{{{{{{{{{{{{e;void n(){;; int m;;half x;
                                                                                                       ^
7 errors
